--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,12 +34,17 @@ backtraces = ["cosmwasm-std/backtraces"]
 debug-print = ["cosmwasm-std/debug-print"]
 
 [dependencies]
-snafu = { version = "0.6.3" }
-serde = { version = "1.0.103", default-features = false, features = ["derive"] }
+cosmwasm-schema = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
+cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
+cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print" }
 schemars = "0.7"
-cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
-cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
-# secret-toolkit = "0.2.0" # Uncomment this for extra tools
+serde = { version = "1.0.103", default-features = false, features = ["derive"] }
+snafu = { version = "0.6.3" }
+secret-toolkit = { git = "https://github.com/enigmampc/secret-toolkit", branch = "debug-print" }
+subtle = { version = "2.2.3", default-features = false }
+base64 = "0.12.3"
+hex = "0.4.2"
+sha2 = { version = "0.9.1", default-features = false }
 
 [dev-dependencies]
 cosmwasm-schema = "0.10.1"
