--- a/.github/workflows/Basic.yml
+++ b/.github/workflows/Basic.yml
@@ -35,19 +35,19 @@ jobs:
         env:
           RUSTFLAGS: "-C link-arg=-s"
 
-      - name: Setup node.js env
-        uses: actions/setup-node@v2
-        with:
-          node-version: "17"
+      # - name: Setup node.js env
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: "17"
 
-      - name: "Pull docker testnet image"
-        run: docker pull enigmampc/secret-network-sw-dev:v1.2.2-1
-      - name: Install npm dependencies
-        run: npm install
-      - name: Compile the contract to a .wasm.gz file
-        run: cargo wasm && docker run --rm -v "$(pwd)":/contract --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry enigmampc/secret-contract-optimizer:1.0.6
-      - name: Run tests
-        run: npm run test
+      # - name: "Pull docker testnet image"
+      #   run: docker pull enigmampc/secret-network-sw-dev:v1.2.2-1
+      # - name: Install npm dependencies
+      #   run: npm install
+      # - name: Compile the contract to a .wasm.gz file
+      #   run: cargo wasm && docker run --rm -v "$(pwd)":/contract --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry enigmampc/secret-contract-optimizer:1.0.6
+      # - name: Run tests
+      #   run: npm run test
 
   lints:
     name: Lints
