--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,6 @@ backtraces = ["cosmwasm-std/backtraces"]
 debug-print = ["cosmwasm-std/debug-print"]
 
 [dependencies]
-cosmwasm-schema = { version = "0.10.1" }
 cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
 cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
 schemars = "0.7"
@@ -46,7 +45,8 @@ base64 = "0.12.3"
 hex = "0.4.2"
 sha2 = { version = "0.9.1", default-features = false }
 
-
+[dev-dependencies]
+cosmwasm-schema = "0.10.1"
 
 
 
